# bpy_addons

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
docs/source/: conf.py  index.rst
src/bpy_addons/: __init__.py  generate.py
tests/test_bpy_addons/: test_generate.py
